--- a/source/html/visualizer/scss/skype.scss
+++ b/source/html/visualizer/scss/skype.scss
@@ -1,9 +1,11 @@
-@import 'node_modules/adaptive-cards/scss/base';
+@import 'node_modules/microsoft-adaptivecards/scss/base';
 
 .skypeContainer {
     display: flex;
     align-items: flex-start;
 }
+
+@include base-anchor();
 
 @include base-container();
 
