--- a/source/html/visualizer/css/teams.css
+++ b/source/html/visualizer/css/teams.css
@@ -2,9 +2,28 @@
   cursor: pointer;
 }
 
+a.ac-anchor {
+  text-decoration: none;
+}
+
+a.ac-anchor:link {
+  color: #005A9E;
+}
+
+a.ac-anchor:visited {
+  color: #005A9E;
+}
+
+a.ac-anchor:link:active {
+  color: #004D84;
+}
+
+a.ac-anchor:visited:active {
+  color: #004D84;
+}
+
 .ac-container.ac-selectable {
   padding: 0px;
-  cursor: pointer;
 }
 
 .ac-container.ac-selectable:hover {
