--- a/source/html/visualizer/css/toast.css
+++ b/source/html/visualizer/css/toast.css
@@ -2,8 +2,28 @@
   cursor: pointer;
 }
 
+a.ac-anchor {
+  text-decoration: none;
+}
+
+a.ac-anchor:link {
+  color: #005A9E;
+}
+
+a.ac-anchor:visited {
+  color: #005A9E;
+}
+
+a.ac-anchor:link:active {
+  color: #004D84;
+}
+
+a.ac-anchor:visited:active {
+  color: #004D84;
+}
+
 .ac-container.ac-selectable {
-  padding: 5px;
+  padding: 0px;
 }
 
 .ac-container.ac-selectable:hover {
