UWP visualizer app improvements
Tabbed UI, error reporting and warnings, instant preview as you type, remembers the files you had open, automatically launches with the samples files open, can save changes on a file

--- a/source/uwp/Visualizer/App.xaml
+++ b/source/uwp/Visualizer/App.xaml
@@ -3,6 +3,17 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:XamlCardVisualizer"
-    RequestedTheme="Light">
+    RequestedTheme="Light"
+    xmlns:converters="using:XamlCardVisualizer.Converters">
+
+    <Application.Resources>
+        <converters:NotNullToVisibilityConverter x:Key="NotNullToVisibilityConverter"/>
+
+        <Style x:Key="HorizontalListViewItemContainerStyle" TargetType="ListViewItem">
+            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+            <Setter Property="Padding" Value="0"/>
+        </Style>
+        
+    </Application.Resources>
 
 </Application>
