--- a/source/uwp/Visualizer/MainPage.xaml
+++ b/source/uwp/Visualizer/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+
     <Page.Resources>
         <Style x:Key="CommandButton" TargetType="Button">
             <Setter Property="Margin" Value="5,0,0,0"/>
@@ -13,36 +14,95 @@
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!--Top buttons-->
+        <CommandBar Opening="CommandBar_Opening" Closing="CommandBar_Closing">
+            <CommandBar.Content>
+                <StackPanel x:Name="StackPanelMainAppBarButtons" Orientation="Horizontal">
+                    <AppBarButton
+                        Icon="Add"
+                        Label="New card"
+                        x:Name="AppBarNew"
+                        Click="AppBarNew_Click"
+                        IsCompact="True"/>
+                    <AppBarButton
+                        x:Name="AppBarOpen"
+                        Icon="OpenFile"
+                        Label="Open file"
+                        Click="AppBarOpen_Click"
+                        IsCompact="True"/>
+                    <AppBarButton
+                        x:Name="AppBarSave"
+                        Icon="Save"
+                        Label="Save file"
+                        Click="AppBarSave_Click"
+                        IsCompact="True"/>
+                </StackPanel>
+            </CommandBar.Content>
+        </CommandBar>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="140"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            
+            <!--Tabs-->
+            <ListView
+                x:Name="ListViewTabs"
+                ItemsSource="{Binding OpenDocuments}"
+                SelectedItem="{Binding CurrentDocument, Mode=TwoWay}"
+                Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
+                ItemContainerStyle="{StaticResource HorizontalListViewItemContainerStyle}"
+                AllowDrop="True"
+                CanReorderItems="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <local:TabView />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <!--Tab page-->
+            <local:DocumentView
+                Grid.Column="1"
+                DataContext="{Binding CurrentDocument}"
+                Visibility="{Binding CurrentDocument, Converter={StaticResource NotNullToVisibilityConverter}}"/>
+
+        </Grid>
+
+
+
+
+
+
+
+
 
         <!-- JSON input panel-->
-        <Grid Grid.Column="0">
+        <!--<Grid Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock Text="JSON:" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="0"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="0">
-                <Button Content="Load File..." Click="loadFileButton_Clicked" Style="{StaticResource CommandButton}"/>
-                <Button Content="Generate" Click="generateButton_Clicked" Style="{StaticResource CommandButton}"/>
-            </StackPanel>
             <RichEditBox x:Name="adaptiveJson" Grid.Row="2"/>
-        </Grid>
+        </Grid>-->
 
         <!-- Render outputs-->
-        <Grid Grid.Column="2">
+        <!--<Grid Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock Text="Rendered As Xaml Output:" Grid.Row="0"/>
             <ContentPresenter x:Name="renderedXamlPresenter" Grid.Row="1"/>
-        </Grid>
+        </Grid>-->
     </Grid>
     
 </Page>
