UWP added host config editor

--- a/source/uwp/Visualizer/MainPage.xaml
+++ b/source/uwp/Visualizer/MainPage.xaml
@@ -41,6 +41,12 @@
                         Label="Save file"
                         Click="AppBarSave_Click"
                         IsCompact="True"/>
+                    <AppBarToggleButton
+                        x:Name="AppBarHostConfigEditor"
+                        Icon="Setting"
+                        Label="Host config"
+                        IsCompact="True"
+                        Click="AppBarHostConfigEditor_Click"/>
                 </StackPanel>
             </CommandBar.Content>
             <CommandBar.SecondaryCommands>
@@ -78,6 +84,37 @@
                 DataContext="{Binding CurrentDocument}"
                 Visibility="{Binding CurrentDocument, Converter={StaticResource NotNullToVisibilityConverter}}"/>
 
+        </Grid>
+        
+        <!--Host config editor-->
+        <Grid
+            Grid.Row="1"
+            x:Name="HostConfigEditorView"
+            Visibility="Collapsed">
+            
+            <Rectangle
+                Fill="Black"
+                Opacity="0.3"
+                Tapped="HostConfigTransparentBackdrop_Tapped"/>
+
+            <!--We apply padding on right to keep the preview visible-->
+            <Grid
+                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                BorderThickness="0,0,8,0"
+                BorderBrush="{ThemeResource SystemControlBackgroundAccentBrush}"
+                Margin="0,0,320,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock
+                    Text="Host config"
+                    Style="{ThemeResource SubtitleTextBlockStyle}"
+                    Margin="6"/>
+                <local:GenericDocumentView
+                    Grid.Row="1"
+                    DataContext="{Binding HostConfigEditor}"/>
+            </Grid>
         </Grid>
 
 
