--- a/source/html/visualizer/css/skype.css
+++ b/source/html/visualizer/css/skype.css
@@ -43,31 +43,32 @@ a.ac-anchor:visited:active {
   background-color: rgba(0, 0, 0, 0.15);
 }
 
-.ac-pushButton, .ac-linkButton {
-  font-family: "Segoe UI", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
+.ac-pushButton {
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 4px 10px 6px 10px;
   text-align: center;
   vertical-align: middle;
   cursor: default;
+  font-family: "Segoe UI", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 4px 10px 6px 10px;
+  height: 31px;
   background-color: white;
   color: #0078d7;
 }
 
-.ac-pushButton:hover, .ac-linkButton:hover {
+.ac-pushButton:hover {
   background-color: #0078d7;
   color: #fff;
 }
 
-.ac-pushButton:active, .ac-linkButton:active {
+.ac-pushButton:active {
   background-color: #0078d7;
   color: #fff;
 }
 
-.ac-pushButton, .ac-linkButton {
+.ac-pushButton {
   border: 2px solid #dcdcdc;
   border-radius: 20px;
   line-height: 20px;
@@ -77,10 +78,10 @@ a.ac-anchor:visited:active {
   font-family: "Segoe UI", sans-serif;
   font-size: 14px;
   color: black;
+  height: 31px;
 }
 
 .ac-input.ac-textInput {
-  height: 30px;
   resize: none;
 }
 
