--- a/source/html/visualizer/scss/teams.scss
+++ b/source/html/visualizer/scss/teams.scss
@@ -4,24 +4,21 @@
 
 @include base-container();
 
-@include base-push-button();
+@include base-push-button(
+    $border: 2px solid #5D60B3,
+    $padding: 4px 10px 5px 10px,
 
-@include base-link-button(
+    $background-color: white,
+    $color: #5D60B3,
+
     $active-background-color: #4F5399,
     $active-color: white,
-    $background-color: white,
-    $border: 2px solid #5D60B3,
-    $color: #5D60B3,
-    $cursor: default,
+
     $hover-background-color: #5D60B3,
     $hover-color: white,
-    $padding: 4px 10px 5px 10px,
-    $subdued: false
-    );
 
-.ac-linkButton {
-    text-align: center;
-    vertical-align: middle;    
-}
+    $expanded-background-color: #4F5399,
+    $expanded-color: white
+);
 
 @include base-input();
