--- a/source/html/visualizer/css/toast.css
+++ b/source/html/visualizer/css/toast.css
@@ -66,7 +66,6 @@ a.ac-anchor:visited:active {
   font-family: "Segoe UI", sans-serif;
   font-size: 14px;
   color: white;
-  height: 31px;
 }
 
 .ac-input.ac-textInput {
@@ -75,6 +74,10 @@ a.ac-anchor:visited:active {
 
 .ac-input.ac-textInput.ac-multiline {
   height: 72px;
+}
+
+.ac-input.ac-textInput, .ac-input.ac-numberInput, .ac-input.ac-dateInput, .ac-input.ac-timeInput {
+  height: 31px;
 }
 
 .ac-input.ac-textInput, .ac-input.ac-numberInput, .ac-input.ac-dateInput, .ac-input.ac-timeInput, .ac-input.ac-multichoiceInput {
