--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/code-example.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/code-example.ejs
@@ -1,7 +1,7 @@
 <div class="w3-cell-row">
 
     <div class="w3-container w3-cell w3-card-2 w3-light-grey w3-mobile code-snippet">
-        <pre><code><%- getcontent(examplePath) %></code></pre>
+        <pre><code class='json'><%- getcontent(examplePath) %></code></pre>
     </div>
 
     <div class="w3-container w3-cell w3-card-2 w3-blue w3-mobile" style="min-width: 250px; max-width: 250px">
