--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/layout.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/layout.ejs
@@ -4,6 +4,7 @@
 
 <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
 
+<div id="mainContent">
   <%- body %>
 </div>
         
