--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/head.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/head.ejs
@@ -37,9 +37,18 @@
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  
+
+
+  <link rel="stylesheet" href="https://docs.microsoft.com/_themes/docs.theme/master/en-us/_themes/css/500aeba2527cd489eed0.site.css ">
+  <link rel="stylesheet" href="https://docs.microsoft.com/_themes/docs.theme/master/en-us/_themes/css/500aeba2527cd489eed0.conceptual.css ">
+
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+
   <%- css('css/style') %>
   <%- css("visualizer/css/app.css") %>
 
   <%- partial('google-analytics') %>
+
+  <link rel="stylesheet" href="https://statics-uhf-eus.akamaized.net/west-european/shell/_scrf/css/themes=default.device=uplevel_web_pc_webkit_chrome/59-bc11b0/dd-86b6b8/a4-a4a73d/a9-795ebf/34-34de2e/4b-2601fd?ver=2.0" type="text/css" media="all" />
+
 </head>
