--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/explorer.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/explorer.ejs
@@ -1,45 +1,50 @@
 
-<div class="w3-content" style="max-width:1564px">
+<div id="content-wrapper" class="w3-content" style="max-width:1564px">
 
 
-<div id="sidebar" class="w3-sidebar w3-bar-block w3-light-grey w3-card-2" style="width: 180px">
-  <% page.schema.forEach(function(root) { %>
-      <button class="w3-button w3-block w3-left-align" onclick="myAccFunc()">
-        <%= root.title %></i>
-      </button>
-      <div class="w3-white w3-card-2">
-        <% root.children.forEach(function(child) { %>
-          <a href="<%- url_for('./explorer/' + child.name + '.html') %>" class="w3-bar-item w3-button"><%= child.name %></a>
-        <% }) %>
+  <nav id="sidebar-todo" class="toc-todo w3-sidebar w3-collapse w3-bar-block" style="width: 250px">
+    <div class="sidebar__inner">
+      <div class="w3-panels w3-padding-larges">
+        <ul aria-treegrid="true">
+          <% page.schema.forEach(function(root) { %>
+              <li><span onclick="myAccFunc()"><i class="fa fa-angle-down"></i> <%= root.title %></span>
+                <ul>
+                  <% root.children.forEach(function(child) { %>
+                    <li class='<%= page.path.indexOf(child.name + ".html") > 0 ? "selectedHolder" : "" %>'>
+                      <a href="<%- url_for('explorer/' + child.name + '.html') %>"><%= child.name %></a>
+                    </li>
+                  <% }) %>
+                </ul>
+              </li>
+          <% }) %>
+        </ul>
       </div>
-  <% }) %>
+    </div>
+  </nav>
 
-</div>
+  <div class="w3-main" style="margin-left: 260px">
+    <div class="w3-container ">
+      <h1><%= page.element.name %></h1>
 
-<div class="w3-container" style="margin-left: 200px">
-  <h1><%= page.element.name %></h1>
+      <p><%= page.element.description %></p>
 
-  <p><%= page.element.description %></p>
+      <div class="ac-properties"> 
+        <%- markdown(page.propertiesSummary) %>
+      </div>
 
-  <div class="ac-properties"> 
-    <%- markdown(page.propertiesSummary) %>
+
+      <% page.element.examples.forEach(function (example, i) { %>
+        <% if(i == 0) { %>
+          <h2>Example</h2>
+          <%- partial("_partial/code-example", { examplePath: example }) %>
+      <% }}) %>
+
+
+
+      <h2>Properties</h2>
+
+
+      <%- propertiesDetails(page.element.properties) %>
+    </div>
   </div>
-
-
-  <% page.element.examples.forEach(function (example, i) { %>
-    <% if(i == 0) { %>
-      <h2>Example</h2>
-      <%- partial("_partial/code-example", { examplePath: example }) %>
-  <% }}) %>
-
-
-
-  <h3>Properties</h3>
-
-
-  <%- propertiesDetails(page.element.properties) %>
-
-  <a class='trymelink' target='_blank' href='/visualizer?card=/explorer/cards/TextBlock.Color.json'>Try it Yourself »</a>
-</div>
-
 </div>
