--- a/source/html/adaptivecards-site/themes/adaptivecards/source/css/style.css
+++ b/source/html/adaptivecards-site/themes/adaptivecards/source/css/style.css
@@ -1,4 +1,7 @@
-body, p { font-size: 14px;}
+body, p { 
+    font-size: 14px;
+    font-family: segoe-ui_normal,Segoe UI,Segoe,Segoe WP,Helvetica Neue,Helvetica,sans-serif;
+}
 h1{font-size:28px;}
 h2{font-size:24px;}
 h3{font-size:22px;}
@@ -13,8 +16,78 @@ h6{font-size:12px;}
     max-height: 400px;
 }
 
+pre {
+    padding: 0;
+}
+
 .adaptivecard { 
     display: none; 
     max-height: 400px; 
 }
 
+/* Weird conflicts were happening with the docs CSS when it was named toc */
+
+.toc > ul a, .toc > ul span {
+    color: #222;
+    display: block;
+    font-size: .875rem;
+    line-height: 1.3;
+    margin-left: 1.8rem;
+    margin-right: 1rem;
+    padding-bottom: 6px;
+    padding-top: 4px;
+    word-wrap: break-word;
+}
+
+.toc-todo ul ul {
+    margin: 0;
+}
+
+.toc-todo ul {
+    padding-left: 0;
+}
+.toc-todo li {
+    padding-left: 30px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin: 0;
+    display: block;
+}
+
+.toc-todo .selectedHolder {
+    background-color: #0050c5;
+}
+
+.toc-todo .selectedHolder > a,
+.toc-todo .selectedHolder > a:hover {
+    color: #fff;
+}
+
+.toc-todo li a {
+    color: black;
+}
+
+.toc-todo a:active, .toc-todo a:hover {
+    color: #0078d7;
+}
+
+.toc.todo>ul {
+    display: block;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+ul, menu, dir {
+    display: block;
+    list-style-type: disc;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 40px;
+}
+
+.mainContainer[dir=rtl] main ol.clean, .mainContainer[dir=rtl] main ul.clean, main ol.clean, main ul.clean, ol, ul {
+     /* docs css removes all padding. we want it back */
+    padding-left: 40px;
+}
