--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/code-example.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/code-example.ejs
@@ -1,12 +1,14 @@
-<div class="w3-cell-row">
 
-    <div class="w3-container w3-cell w3-card-2 w3-light-grey w3-mobile code-snippet">
+<div class="w3-cell-row">
+    
+    <div class="w3-container w3-cell w3-mobile code-snippet">
         <pre><code class='json'><%- getcontent(examplePath) %></code></pre>
     </div>
 
-    <div class="w3-container w3-cell w3-card-2 w3-blue w3-mobile" style="min-width: 250px; max-width: 250px">
+    <div class="w3-container w3-cell w3-mobile" style="width: 300px">
         <div class="adaptivecard"><%- getcontent(examplePath) %></div>
+        <a class="w3-btn w3-blue" target="_blank" href="/visualizer?card=/explorer/cards/TextBlock.Color.json">Try it Yourself »</a>
     </div>
 
-    <a class='trymelink' target='_blank' href='/visualizer?card=/explorer/cards/TextBlock.Color.json'>Try it Yourself »</a>
+   
 </div>
