--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/head.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/head.ejs
@@ -46,6 +46,7 @@
 
   <%- css('css/style') %>
   <%- css("visualizer/css/app.css") %>
+  <%- css("visualizer/css/outlook.css") %>
 
   <%- partial('google-analytics') %>
 
