--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/sample.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/sample.ejs
@@ -1,21 +1,28 @@
 
-<div class="w3-content" style="max-width:1564px">
+<div id="content-wrapper" class="w3-content" style="max-width:1564px">
 
-<div id="sidebar" class="w3-sidebar w3-bar-block w3-light-grey w3-card-2" style="width: 180px">
-   <div class="w3-white w3-card-2">
-      <% page.samples.forEach(function(sample) { %>
-        <a href="<%- url_for(sample.htmlPath) %>" class="w3-bar-item w3-button"><%= sample.name %></a>
-      <% }) %>
+
+  <nav id="sidebar-todo" class="toc-todo w3-sidebar w3-collapse w3-bar-block" style="width: 250px">
+    <div class="sidebar__inner">
+      <div class="w3-panels w3-padding-larges">
+
+          <ul>
+             <% page.samples.forEach(function(sample) { %>
+              <li class='<%= is_current(sample.htmlPath) ? "selectedHolder" : "" %>'>
+                <a href="<%- url_for(sample.htmlPath) %>"><%= sample.name %></a>
+              </li>
+            <% }) %>
+          </ul>
+
+      </div>
     </div>
-</div>
-
-<div class="w3-container" style="margin-left: 200px">
-  <h1><%= page.title %></h1>
-
-
-
-  <%- partial("_partial/code-example", { examplePath: page.sample.jsonPath }) %>
-
+  </nav>
   
-</div>
+  <div class="w3-main" style="margin-left: 260px">
+
+      <h1 class="w3-container"><%= page.title %></h1>
+      <%- partial("_partial/code-example", { examplePath: page.sample.jsonPath }) %>
+
+  </div>
+  
 </div>
