--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/code-example.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/code-example.ejs
@@ -7,7 +7,7 @@
 
     <div class="w3-container w3-cell w3-mobile" style="width: 300px">
         <div class="adaptivecard"><%- getcontent(examplePath) %></div>
-        <a class="w3-btn w3-blue" target="_blank" href="/visualizer?card=/explorer/cards/TextBlock.Color.json">Try it Yourself »</a>
+        <%- trysamplelink(examplePath) %>
     </div>
 
    
