--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/visualizer.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/visualizer.ejs
@@ -10,6 +10,7 @@
   <select id="hostContainerPicker" class="select"></select>
 </div>
   </div>
+  <div class="w3-cell-row">
   <div class="cardEditor">
       <div class="leftPane">
           <div id="editor">
@@ -21,12 +22,12 @@
           <div id="content" class="markupRender"></div>
       </div>
   </div>
-  <div class="uiHeader" style="display: flex;">
-<div style="flex: 1 1 50%;">
-  <div style="width: 0px; height: 0px; overflow: hidden">
-    <input type="file" id="filePicker" />
-  </div>
-        <div id="loadSample" class="button">Load sample from file...</div>
-</div>
-  </div>
+  <div class="uiHeader w3-container w3-display-container w3-display-bottommiddle" style="width: 100%">
+        <div style="flex: 1 1 50%;">
+            <div style="width: 0px; height: 0px; overflow: hidden">
+                <input type="file" id="filePicker">
+            </div>
+            <div id="loadSample" class="button">Load sample from file...</div>
+        </div>
+    </div>
 </div>
