fixed styling and generation

--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/layout.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/layout.ejs
@@ -2,13 +2,13 @@
 
 <body>
 
-<%- partial('_partial/header', null, {cache: !config.relative_link}) %>
+<%- partial('_partial/header', null, {cache: false}) %>
 
 <div id="mainContent">
   <%- body %>
 </div>
         
-<%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
+<%- partial('_partial/footer', null, {cache: false}) %>
 
 </body>
 </html>
