--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/head.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/head.ejs
@@ -44,9 +44,12 @@
 
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 
-  <%- css("visualizer/css/app.css") %>
-  <%- css("visualizer/css/outlook.css") %>
-  <%- css('css/style') %>
+
+  <% if(is_current("visualizer")) { %>
+   <%- css("css/app.css") %>
+  <% } else { %>
+    <%- css('css/style.css') %>
+  <% } %>
 
   <%- partial('google-analytics') %>
 
