--- a/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/head.ejs
+++ b/source/html/adaptivecards-site/themes/adaptivecards/layout/_partial/head.ejs
@@ -51,6 +51,8 @@
     <%- css('css/style.css') %>
   <% } %>
 
+  <%- css('visualizer/css/outlook.css') %>
+
   <%- partial('google-analytics') %>
 
   <link rel="stylesheet" href="https://statics-uhf-eus.akamaized.net/west-european/shell/_scrf/css/themes=default.device=uplevel_web_pc_webkit_chrome/59-bc11b0/dd-86b6b8/a4-a4a73d/a9-795ebf/34-34de2e/4b-2601fd?ver=2.0" type="text/css" media="all" />
