final site tweaks

--- a/source/website/wwwroot/css/app.css
+++ b/source/website/wwwroot/css/app.css
@@ -2,7 +2,6 @@ body {
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     font-weight: normal;
-    height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -56,13 +55,11 @@ body {
     margin: 0px 10px 10px 10px;
 }
 
-.cardEditor {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 100%;
-    min-height: 0;
-    margin: 10px;
+
+
+#editor {
+    height: calc(100vh - 160px);
+    border: 1px solid #EEEEEE;    
 }
 
 .leftPane {
@@ -91,17 +88,6 @@ body {
 div.markupRender {
     margin-right: 20px;
     margin-bottom: 20px;
-}
-
-#editor {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
-    box-sizing: border-box;
-    resize: none;
-    white-space: nowrap;
-    overflow: auto;
-    border: 1px solid #EEEEEE;
 }
 
 .button {
