--- a/source/nodejs/adaptivecards/scss/base.scss
+++ b/source/nodejs/adaptivecards/scss/base.scss
@@ -5,7 +5,7 @@ $font-family: 'Segoe UI', sans-serif;
     $selectable-hover-background: rgba(0, 0, 0, 0.1),
     $selectable-active-background: rgba(0, 0, 0, 0.15)
 ) {
-    .ac-container {
+    .ac-container, .ac-columnSet {
         &.ac-selectable {
             padding: $selectable-padding;
 
