--- a/source/nodejs/adaptivecards-visualizer/css/skype.css
+++ b/source/nodejs/adaptivecards-visualizer/css/skype.css
@@ -36,11 +36,11 @@ a.ac-anchor:visited:active {
 }
 
 .ac-container.ac-selectable:hover, .ac-columnSet.ac-selectable:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1) !important;
 }
 
 .ac-container.ac-selectable:active, .ac-columnSet.ac-selectable:active {
-  background-color: rgba(0, 0, 0, 0.15);
+  background-color: rgba(0, 0, 0, 0.15) !important;
 }
 
 .ac-pushButton {
