Update UWP Visualizer to allow dynamically set UseFixedDimensions

--- a/source/uwp/Visualizer/MainPage.xaml
+++ b/source/uwp/Visualizer/MainPage.xaml
@@ -52,7 +52,7 @@
             <CommandBar.SecondaryCommands>
                 <AppBarToggleButton
                     Label="Use Async Render Method"
-                    IsChecked="{Binding UseAsyncRenderMethod, Mode=TwoWay}"/>
+                    IsChecked="{Binding UseFixedDimensions, Mode=TwoWay}"/>
             </CommandBar.SecondaryCommands>
         </CommandBar>
 
