Update UWP Visualizer part 2 for fixed dimensions (forgot to change view text)

--- a/source/uwp/Visualizer/MainPage.xaml
+++ b/source/uwp/Visualizer/MainPage.xaml
@@ -51,7 +51,7 @@
             </CommandBar.Content>
             <CommandBar.SecondaryCommands>
                 <AppBarToggleButton
-                    Label="Use Async Render Method"
+                    Label="Use fixed dimensions"
                     IsChecked="{Binding UseFixedDimensions, Mode=TwoWay}"/>
             </CommandBar.SecondaryCommands>
         </CommandBar>
