added warnings support to .NET Html renderer, cleaned up html sample app

--- a/source/dotnet/Samples/AdaptiveCards.Sample.Html/AdaptiveCards.css
+++ b/source/dotnet/Samples/AdaptiveCards.Sample.Html/AdaptiveCards.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
 }
 
+.cardcontainer {
+    width: 400px;
+    border-width: 1px;
+    border-color: #808080;
+    border-style: solid;
+    padding: 8px;
+}
+
 .NoSeparation {
     margin-top: 0px !important;
 }
