changed body/actions to IList, removed HostConfigParseResult

--- a/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
+++ b/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
@@ -109,7 +109,9 @@
         <xctk:PropertyGrid Grid.Row="1" Grid.Column="4"  Name="hostConfigEditor" PropertyValueChanged="HostConfigEditor_OnPropertyValueChanged"  Visibility="Visible" >
         </xctk:PropertyGrid>
 
-        <StackPanel Grid.Row="2" Name="cardError" />
+        <StackPanel Grid.Row="2" Grid.Column="0" Name="cardError" />
+
+        <StackPanel Grid.Row="2" Grid.Column="4" Name="hostConfigerror" />
 
     </Grid>
 </Window>
