remove markdown-it dep, delete old containers and visualizer cleanup

--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/source/css/style.css
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/source/css/style.css
@@ -34,7 +34,7 @@ h6{font-size:12px;}
     border: solid 1px lightgray;
     margin-top: 10px;
     margin-bottom: 5px;
-    
+    max-width: 300px;
 }
 
 .explorer .adaptivecard,
