--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/_partial/footer.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/_partial/footer.ejs
@@ -18,6 +18,8 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+<script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.js"></script>
+
 <%- js('js/sticky-sidebar.js') %>
 
 <% /* from UHF MSDocsHeader-AdaptiveCards */ %>
