visualizer errors no longer stark red, changed Container to Host App

--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/visualizer.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/visualizer.ejs
@@ -13,7 +13,7 @@
 
 
   <div style="w3-container w3-onethird">
-        <span style="margin-right: 6px;">Select a container:</span>
+        <span style="margin-right: 6px;">Select a Host App:</span>
         <select id="hostContainerPicker" class="select"></select>
     </div>
 </div>
@@ -23,10 +23,8 @@
   <div id="editor" class="w3-col" style="width: 60%">
   </div>
 
-  <div class="w3-col" style="width: 40%">
+  <div class="w3-col w3-padding w3-padding-16" style="width: 40%">
     <div id="errorContainer" class="errorContainer"></div>
-    <div class="w3-container w3-padding-16">
-      <div id="content" class="markupRender w3-container"></div>
-    </div>
+    <div id="content"></div>
   </div>
 </div>
