--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/source/css/app.css
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/source/css/app.css
@@ -25,7 +25,7 @@ body {
 }
 
 .errorContainer {
-    background-color: red;
+    background: #2762ce;
     color: white;
     padding: 4px 8px 4px 8px;
     margin-bottom: 20px;
